# Gaussian-Splatting

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  imgui.ini  vscode.code-workspace
cgp/: opengl_include.hpp
cgp/01_base/error/: error.cpp  error.hpp
cgp/07_image/: image.cpp
cgp/08_random_noise/noise/: noise.cpp
cgp/14_window/imgui/: imgui.cpp  imgui.hpp
cgp/14_window/window/: window.cpp
cgp/16_drawable/curve_drawable_dynamic_extend/: curve_drawable_dynamic_extend.cpp
cgp/19_camera_controller/camera_controller_2d_displacement/: camera_controller_2d_displacement.cpp  camera_controller_2d_displacement.hpp
cgp/19_camera_controller/camera_controller_first_person/: camera_controller_first_person.cpp  camera_controller_first_person.hpp
cgp/19_camera_controller/camera_controller_first_person_euler/: camera_controller_first_person_euler.cpp  camera_controller_first_person_euler.hpp
cgp/19_camera_controller/camera_controller_fly_mode/: camera_controller_fly_mode.cpp  camera_controller_fly_mode.hpp
cgp/19_camera_controller/camera_controller_generic_base/: camera_controller_generic_base.hpp
cgp/19_camera_controller/camera_controller_orbit/: camera_controller_orbit.cpp  camera_controller_orbit.hpp
cgp/19_camera_controller/camera_controller_orbit_euler/: camera_controller_orbit_euler.cpp  camera_controller_orbit_euler.hpp
cgp/20_format_parser/mesh_loader/obj_advanced/: obj_advanced.cpp
cgp/21_scene_project_helper/: scene_project_helper.hpp
scripts/: visual-studio-generate.bat
scripts/emscripten/: Makefile_emscripten  emscripten_template.html  linux_compile_emscripten.py
shaders/compute/: radix_sort.comp.glsl
shaders/instancing/: instancing.frag.glsl  instancing.vert.glsl  project.comp.glsl  radix_bin_prefix.comp.glsl  radix_block_prefix.comp.glsl  radix_histogram.comp.glsl  radix_scatter.comp.glsl  splat.frag.glsl  splat.vert.glsl
shaders/mesh/: mesh.frag.glsl
shaders/shadow/: shadow.frag.glsl  shadow.vert.glsl
src/: application.cpp  application.hpp  environment.cpp  environment.hpp  helper.cpp  helper.hpp  main.cpp  physics.cpp  physics.hpp  playable_camera_controller.cpp  playable_camera_controller.hpp  scene.cpp  scene.hpp
